fixed form overflow issue

--- a/final-project/styles/pottery.css
+++ b/final-project/styles/pottery.css
@@ -240,7 +240,8 @@ nav ul li a:hover {
     text-align: left;
     border: solid var(--color-two);
     border-radius: 8px;
-    max-width: 400px;
+    max-width: 100%;
+    width: 400px;
     flex: 1;
     position: sticky;
     /*not sure if I want this yet*/
@@ -266,6 +267,10 @@ nav ul li a:hover {
     height: auto;
     width: 100%;
     /*position: static;*/
+    display: flex;
+    flex-direction: column;
+    /*gap: 10px;*/
+    min-width: 50%;
 }
 
 #classForm label,
@@ -287,21 +292,25 @@ nav ul li a:hover {
     display: flex;
     align-items: center;
     gap: 20px;
+    min-width: 40%;
 }
 
 #classForm .skill label {
     display: flex;
     align-items: center;
-    gap: 8px;
+    gap: 1px;
     white-space: nowrap;
     font-weight: normal;
     margin-top: 5px;
+    color: blue;
+    min-width: 20%;
+
 }
 
-#classForm #notes {
+#classForm textarea {
     height: 50px;
-    border: thick black;
-    background-color: white;
+    border: 1px thick var(--color-one);
+    background-color: var(--color-six);
 }
 
 #classForm input[type="text"],
@@ -504,7 +513,24 @@ nav ul li a:hover {
     #classForm {
         order: 1;
         min-width: 100%;
+        position: static;
     }
+
+    #classForm fieldset {
+        gap: 8px;
+        min-width: 50%;
+    }
+
+
+
+    #classForm .skill label {
+        min-width: none;
+        font-size: 0.9rem;
+        gap: 1px;
+        max-width: 90%
+    }
+
+
 
     .classHeader {
         font-size: 1.5rem;
